Run and test access

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/portal
+spring.datasource.username=codexy
+spring.datasource.password=MDEJACjm259502
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
 
