Class utility for create and get claims from token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
 
+token.secret=$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t
