--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
 
 token.secret=$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t
+
+# Custom white label
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
