--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+server.port=8081
+
 spring.datasource.url=jdbc:mariadb://localhost:3306/portal
-spring.datasource.username=codexy
-spring.datasource.password=MDEJACjm259502
+spring.datasource.username=[username]
+spring.datasource.password=[your password]
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -11,3 +13,6 @@ token.secret=$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t_$ecr3t
 # Custom white label
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
